# 16x2display-pico-sdk

./: CMakeLists.txt  display16x2.cpp  main.cpp
